--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
   },
   "overrides": {},
   "devDependencies": {
-    "@commitlint/cli": "^17.7.1",
+    "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
     "@iconify-json/carbon": "^1.1.21",
     "@iconify-json/logos": "^1.1.37",
@@ -86,12 +86,12 @@
     "@types/element-resize-detector": "^1.1.4",
     "@types/line-reader": "^0.0.35",
     "@types/lodash-es": "^4.17.9",
-    "@types/markdown-it-footnote": "^3.0.0",
-    "@types/node": "^20.7.0",
+    "@types/markdown-it-footnote": "^3.0.1",
+    "@types/node": "^20.8.3",
     "@types/three": "^0.156.0",
-    "@unocss/preset-attributify": "^0.56.2",
-    "@unocss/preset-icons": "^0.56.2",
-    "@unocss/preset-uno": "^0.56.2",
+    "@unocss/preset-attributify": "^0.56.5",
+    "@unocss/preset-icons": "^0.56.5",
+    "@unocss/preset-uno": "^0.56.5",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "antdv-component-resolver": "^1.0.4",
     "autoprefixer": "^10.4.16",
@@ -104,19 +104,19 @@
     "husky": "^8.0.3",
     "increase-memory-limit": "^1.0.7",
     "less": "^4.2.0",
-    "markdown-it": "^13.0.1",
+    "markdown-it": "^13.0.2",
     "markdown-it-mathjax3": "^4.3.2",
-    "mermaid": "^10.4.0",
+    "mermaid": "^10.5.0",
     "patch-package": "^8.0.0",
-    "postcss": "^8.4.30",
-    "release-it": "^16.2.0",
-    "sass": "^1.68.0",
+    "postcss": "^8.4.31",
+    "release-it": "^16.2.1",
+    "sass": "^1.69.0",
     "sitemap": "^7.1.1",
-    "unocss": "^0.56.2",
+    "unocss": "^0.56.5",
     "unplugin-auto-import": "^0.16.6",
     "unplugin-icons": "^0.17.0",
     "unplugin-vue-components": "^0.25.2",
-    "vite": "^4.4.9",
+    "vite": "^4.4.11",
     "vite-aliases": "^0.11.3",
     "vite-plugin-html-config": "^1.0.11",
     "vite-plugin-pwa": "^0.16.5",
@@ -125,10 +125,10 @@
     "vitepress": "^1.0.0-rc.20",
     "vitepress-plugin-compression": "^0.1.4",
     "vitepress-plugin-life-progress": "^0.0.3",
-    "vitepress-plugin-mermaid": "^2.0.14",
+    "vitepress-plugin-mermaid": "^2.0.15",
     "vitepress-plugin-sandpack": "^1.1.1",
     "vitepress-plugin-search": "^1.0.4-alpha.20",
-    "vitepress-sidebar": "^1.16.5",
+    "vitepress-sidebar": "^1.18.0",
     "vue": "^3.3.4"
   },
   "dependencies": {
@@ -136,7 +136,7 @@
     "@faker-js/faker": "^8.1.0",
     "@heroicons/vue": "^2.0.18",
     "@iconify/iconify": "^3.1.1",
-    "@mdit-vue/shared": "^0.12.1",
+    "@mdit-vue/shared": "^1.0.0",
     "@tweenjs/tween.js": "^21.0.0",
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.2",
@@ -159,6 +159,7 @@
     "jsencrypt": "^3.3.2",
     "l-watermark": "^2.1.2",
     "line-reader": "^0.4.0",
+    "localforage": "^1.10.0",
     "locate-path": "^7.2.0",
     "lodash-es": "^4.17.21",
     "lottie-web": "^5.12.2",
@@ -171,7 +172,7 @@
     "ofetch": "^1.3.3",
     "oimo-esm": "^1.0.10",
     "simple-git": "^3.20.0",
-    "three": "^0.156.1",
+    "three": "^0.157.0",
     "vite-plugin-monitor": "^0.2.1",
     "vite-plugin-vitepress-auto-index": "^1.1.12",
     "vite-plugin-vue-preview": "^1.3.0",
@@ -181,7 +182,7 @@
     "vitepress-plugin-image-viewer": "^1.1.2",
     "vitepress-plugin-npm-commands": "^0.5.1",
     "vitepress-plugin-nprogress": "^0.0.4",
-    "vitepress-plugin-rss": "^0.1.2",
+    "vitepress-plugin-rss": "^0.1.3",
     "vitepress-plugin-tabs": "^0.4.1",
     "vue-resize-observer": "^2.0.16",
     "vue3-simple-icons": "^9.10.0",
