--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "name": "changweihua.github.io",
   "scripts": {
     "docs:build": "node --max-old-space-size=4096 node_modules/vitepress/bin/vitepress.js build",
     "docs:dev": "vitepress dev",
@@ -75,23 +76,23 @@
   },
   "overrides": {},
   "devDependencies": {
-    "@commitlint/cli": "^17.8.0",
-    "@commitlint/config-conventional": "^17.8.0",
+    "@commitlint/cli": "^18.2.0",
+    "@commitlint/config-conventional": "^18.1.0",
     "@iconify-json/carbon": "^1.1.21",
     "@iconify-json/logos": "^1.1.37",
     "@iconify/vue": "^4.1.1",
     "@release-it/conventional-changelog": "^7.0.2",
-    "@types/bluebird": "^3.5.41",
-    "@types/dat.gui": "^0.7.11",
-    "@types/element-resize-detector": "^1.1.4",
-    "@types/line-reader": "^0.0.35",
-    "@types/lodash-es": "^4.17.9",
-    "@types/markdown-it-footnote": "^3.0.1",
-    "@types/node": "^20.8.6",
-    "@types/three": "^0.157.0",
-    "@unocss/preset-attributify": "^0.56.5",
-    "@unocss/preset-icons": "^0.56.5",
-    "@unocss/preset-uno": "^0.56.5",
+    "@types/bluebird": "^3.5.42",
+    "@types/dat.gui": "^0.7.12",
+    "@types/element-resize-detector": "^1.1.6",
+    "@types/line-reader": "^0.0.37",
+    "@types/lodash-es": "^4.17.11",
+    "@types/markdown-it-footnote": "^3.0.3",
+    "@types/node": "^20.9.0",
+    "@types/three": "^0.158.2",
+    "@unocss/preset-attributify": "^0.57.3",
+    "@unocss/preset-icons": "^0.57.3",
+    "@unocss/preset-uno": "^0.57.3",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "antdv-component-resolver": "^1.0.4",
     "autoprefixer": "^10.4.16",
@@ -106,32 +107,32 @@
     "less": "^4.2.0",
     "markdown-it": "^13.0.2",
     "markdown-it-mathjax3": "^4.3.2",
-    "mermaid": "^10.5.0",
+    "mermaid": "^10.6.1",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.31",
     "release-it": "^16.2.1",
-    "sass": "^1.69.4",
+    "sass": "^1.69.5",
     "sitemap": "^7.1.1",
-    "unocss": "^0.56.5",
-    "unplugin-auto-import": "^0.16.6",
-    "unplugin-icons": "^0.17.0",
+    "unocss": "^0.57.3",
+    "unplugin-auto-import": "^0.16.7",
+    "unplugin-icons": "^0.17.3",
     "unplugin-vue-components": "^0.25.2",
     "vfonts": "^0.0.3",
-    "vite": "^4.4.11",
+    "vite": "^4.5.0",
     "vite-aliases": "^0.11.3",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^1.0.11",
-    "vite-plugin-pwa": "^0.16.5",
+    "vite-plugin-pwa": "^0.16.7",
     "vite-plugin-remove-console": "^2.1.1",
     "vite-plugin-style-import": "^2.0.0",
-    "vitepress": "^1.0.0-rc.22",
+    "vitepress": "^1.0.0-rc.25",
     "vitepress-plugin-compression": "^0.1.4",
     "vitepress-plugin-life-progress": "^0.0.3",
     "vitepress-plugin-mermaid": "^2.0.15",
-    "vitepress-plugin-sandpack": "^1.1.2",
+    "vitepress-plugin-sandpack": "^1.1.4",
     "vitepress-plugin-search": "^1.0.4-alpha.20",
     "vitepress-sidebar": "^1.18.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.8"
   },
   "dependencies": {
     "@enra-gmbh/panolens": "^0.0.11",
@@ -174,7 +175,7 @@
     "ofetch": "^1.3.3",
     "oimo-esm": "^1.0.10",
     "simple-git": "^3.20.0",
-    "three": "^0.157.0",
+    "three": "^0.158.0",
     "vite-plugin-monitor": "^0.2.1",
     "vite-plugin-vitepress-auto-index": "^1.1.12",
     "vite-plugin-vue-preview": "^1.3.0",
