--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.3",
-    "@types/node": "^20.10.7",
+    "@types/node": "^20.11.0",
     "@types/three": "^0.160.0",
     "@unocss/preset-attributify": "^0.58.3",
     "@unocss/preset-icons": "^0.58.3",
@@ -101,7 +101,7 @@
     "cssnano": "^6.0.3",
     "cz-customizable": "^7.0.0",
     "feed": "^4.2.2",
-    "flexsearch": "^0.7.41",
+    "flexsearch": "^0.7.43",
     "husky": "^8.0.3",
     "increase-memory-limit": "^1.0.7",
     "less": "^4.2.0",
@@ -125,14 +125,14 @@
     "vite-plugin-pwa": "^0.17.4",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
-    "vitepress": "1.0.0-rc.34",
+    "vitepress": "^1.0.0-rc.36",
     "vitepress-plugin-compression": "^0.1.4",
     "vitepress-plugin-life-progress": "^0.0.3",
     "vitepress-plugin-mermaid": "^2.0.16",
     "vitepress-plugin-sandpack": "^1.1.4",
     "vitepress-plugin-search": "^1.0.4-alpha.22",
     "vitepress-sidebar": "^1.18.6",
-    "vue": "^3.4.6"
+    "vue": "^3.4.13"
   },
   "dependencies": {
     "@enra-gmbh/panolens": "^0.0.11",
@@ -155,7 +155,7 @@
     "dayjs": "^1.11.10",
     "default-passive-events": "^2.0.0",
     "esno": "^4.0.0",
-    "floating-vue": "^5.0.2",
+    "floating-vue": "^5.0.3",
     "front-matter": "^4.0.2",
     "gltf-pipeline": "^4.1.0",
     "gsap": "^3.12.4",
