--- a/.github/workflows/pages-build-site.yml
+++ b/.github/workflows/pages-build-site.yml
@@ -25,29 +25,29 @@ jobs:
           node-version: 18.x
           # cache: npm
 
-    #   - uses: pnpm/action-setup@v2 // 配置使用pnpm
-    #     name: Install pnpm
-    #     id: pnpm-install
-    #     with:
-    #       version: 7
-    #       run_install: false
+      #   - uses: pnpm/action-setup@v2 // 配置使用pnpm
+      #     name: Install pnpm
+      #     id: pnpm-install
+      #     with:
+      #       version: 7
+      #       run_install: false
 
-    #   - name: Get pnpm store directory
-    #     id: pnpm-cache
-    #     shell: bash
-    #     run: |
-    #       echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+      #   - name: Get pnpm store directory
+      #     id: pnpm-cache
+      #     shell: bash
+      #     run: |
+      #       echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
 
-    #   - uses: actions/cache@v3
-    #     name: Setup pnpm cache
-    #     with:
-    #       path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
-    #       key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-    #       restore-keys: |
-    #         ${{ runner.os }}-pnpm-store-
+      #   - uses: actions/cache@v3
+      #     name: Setup pnpm cache
+      #     with:
+      #       path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+      #       key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+      #       restore-keys: |
+      #         ${{ runner.os }}-pnpm-store-
 
       - name: Install dependencies
-        run: npm install --legacy-peer-deps
+        run: npm ci --legacy-peer-deps
 
       # - name: Increase Memory
       #   run: npm run fix-memory-limit
