--- a/.github/workflows/pages-build-site.yml
+++ b/.github/workflows/pages-build-site.yml
@@ -62,7 +62,7 @@ jobs:
       #   run: npm run docs:build
 
       - name: Build docs
-        run: npm run docs:build
+        run: npm run docs:github_build
 
       - uses: actions/configure-pages@v2
 
