--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,8 +6,9 @@
   "unocss.root": "packages/client",
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.patterns": {
-    "package.json": "tsconfig.*.json,*.cjs,*.js,*.json,*.config.ts,*.config.cjs,.preettierrc,.eslintrc.cjs,.eslintrc,.gitignore,.editorconfig",
     "index.html": "index.html,*.css",
+    "package.json": ".npmrc,tsconfig.*.json,*.cjs,*.js,*.json,*.config.ts,*.config.cjs,.preettierrc,.eslintrc.cjs,.eslintrc,.gitignore,.editorconfig",
+    ".env": "env.*",
     "auto-imports.d.ts": "auto-imports.d.ts,components.d.ts",
     "index.md": "index.md,sponsor.md,CONTRIBUTING.md,CODE_OF_CONDUCT.md,CONTRIBUTING.zh-CN.md,README.md,CHANGELOG.md,PRIVACY_POLICY.md,TERMS_OF_SERVICE.md"
   },
