--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "changweihua.github.io",
   "scripts": {
-    "docs:vbuild": "node --max-old-space-size=4096 node_modules/vitepress/bin/vitepress.js build",
-    "docs:dev": "vitepress dev",
+    "docs:github_build": "node --max-old-space-size=4096 node_modules/vitepress/bin/vitepress.js build --mode github",
+    "docs:build": "node --max-old-space-size=4096 node_modules/vitepress/bin/vitepress.js build",
+    "docs:dev": "vitepress dev --mode development",
     "docs:prepare": "esno scripts/prepare.ts",
-    "docs:build": "vitepress build",
+    "docs:vbuild": "vitepress build",
     "docs:preview": "vitepress preview",
     "register:components": "vitepress-rc",
     "pkg:patch": "patch-package",
@@ -88,7 +89,7 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.3",
-    "@types/node": "^20.11.3",
+    "@types/node": "^20.11.4",
     "@types/three": "^0.160.0",
     "@unocss/preset-attributify": "^0.58.3",
     "@unocss/preset-icons": "^0.58.3",
@@ -125,7 +126,7 @@
     "vite-plugin-pwa": "^0.17.4",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
-    "vitepress": "^1.0.0-rc.37",
+    "vitepress": "^1.0.0-rc.39",
     "vitepress-plugin-compression": "^0.1.4",
     "vitepress-plugin-life-progress": "^0.0.3",
     "vitepress-plugin-mermaid": "^2.0.16",
@@ -144,7 +145,7 @@
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.2",
     "animate.css": "^4.1.1",
-    "ant-design-vue": "4.1.0",
+    "ant-design-vue": "4.1.1",
     "bluebird": "^3.7.2",
     "cannon-es": "^0.20.0",
     "console-ban": "^5.0.0",
