--- a/package.json
+++ b/package.json
@@ -84,8 +84,8 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.4",
-    "@commitlint/config-conventional": "^18.4.4",
+    "@commitlint/cli": "^18.5.0",
+    "@commitlint/config-conventional": "^18.5.0",
     "@iconify-json/carbon": "^1.1.28",
     "@iconify-json/logos": "^1.1.42",
     "@iconify/vue": "^4.1.1",
@@ -96,7 +96,7 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.3",
-    "@types/node": "^20.11.5",
+    "@types/node": "^20.11.6",
     "@types/three": "^0.160.0",
     "@unocss/preset-attributify": "^0.58.3",
     "@unocss/preset-icons": "^0.58.3",
@@ -110,7 +110,7 @@
     "cz-customizable": "^7.0.0",
     "feed": "^4.2.2",
     "flexsearch": "^0.7.43",
-    "husky": "^8.0.3",
+    "husky": "^9.0.1",
     "increase-memory-limit": "^1.0.7",
     "less": "^4.2.0",
     "markdown-it": "^14.0.0",
@@ -118,11 +118,11 @@
     "mermaid": "^10.7.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.4.33",
-    "release-it": "^17.0.1",
+    "release-it": "^17.0.3",
     "sass": "^1.70.0",
     "sitemap": "^7.1.1",
     "unocss": "^0.58.3",
-    "unplugin-auto-import": "^0.17.3",
+    "unplugin-auto-import": "^0.17.4",
     "unplugin-icons": "^0.18.2",
     "unplugin-vue-components": "^0.26.0",
     "vfonts": "^0.0.3",
@@ -133,7 +133,7 @@
     "vite-plugin-pwa": "^0.17.4",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
-    "vitepress": "^1.0.0-rc.39",
+    "vitepress": "^1.0.0-rc.40",
     "vitepress-plugin-compression": "^0.1.4",
     "vitepress-plugin-life-progress": "^0.0.3",
     "vitepress-plugin-mermaid": "^2.0.16",
@@ -149,7 +149,7 @@
     "@iconify/iconify": "^3.1.1",
     "@mdit-vue/shared": "^2.0.0",
     "@tweenjs/tween.js": "^23.1.1",
-    "@visactor/vchart": "^1.8.8",
+    "@visactor/vchart": "^1.8.9",
     "@visactor/vchart-theme": "^1.8.8",
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.2",
@@ -171,6 +171,7 @@
     "gsap": "^3.12.5",
     "jsencrypt": "^3.3.2",
     "l-watermark": "^2.1.2",
+    "lhh-utils": "^1.0.6",
     "line-reader": "^0.4.0",
     "localforage": "^1.10.0",
     "locate-path": "^7.2.0",
@@ -186,14 +187,14 @@
     "oimo-esm": "^1.0.10",
     "segment": "^0.1.3",
     "simple-git": "^3.22.0",
-    "three": "^0.160.0",
+    "three": "^0.160.1",
     "vite-plugin-monitor": "^0.2.1",
     "vite-plugin-vitepress-auto-index": "^1.1.12",
     "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-detype": "^0.6.0",
-    "vitepress-plugin-image-viewer": "^1.1.2",
+    "vitepress-plugin-image-viewer": "^1.1.3",
     "vitepress-plugin-npm-commands": "^0.6.0",
     "vitepress-plugin-nprogress": "^0.0.4",
     "vitepress-plugin-rss": "^0.2.1",
