--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.2.0",
+    "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@iconify-json/carbon": "^1.1.31",
     "@iconify-json/logos": "^1.1.42",
@@ -96,17 +96,17 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^20.11.29",
+    "@types/node": "^20.11.30",
     "@types/three": "^0.162.0",
     "@unocss/preset-attributify": "^0.58.6",
     "@unocss/preset-icons": "^0.58.6",
     "@unocss/preset-uno": "^0.58.6",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "antdv-component-resolver": "^1.0.7",
-    "autoprefixer": "^10.4.18",
+    "autoprefixer": "^10.4.19",
     "commitizen": "^4.3.0",
     "conventional-changelog-cli": "^4.1.0",
-    "cssnano": "^6.1.0",
+    "cssnano": "^6.1.1",
     "cz-customizable": "^7.0.0",
     "feed": "^4.2.2",
     "flexsearch": "^0.7.43",
@@ -117,7 +117,7 @@
     "markdown-it-mathjax3": "^4.3.2",
     "mermaid": "^10.9.0",
     "patch-package": "^8.0.0",
-    "postcss": "^8.4.36",
+    "postcss": "^8.4.38",
     "release-it": "^17.1.1",
     "sass": "^1.72.0",
     "sitemap": "^7.1.1",
@@ -126,14 +126,14 @@
     "unplugin-icons": "^0.18.5",
     "unplugin-vue-components": "^0.26.0",
     "vfonts": "^0.0.3",
-    "vite": "^5.1.6",
+    "vite": "^5.2.2",
     "vite-aliases": "^0.11.6",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^1.0.11",
-    "vite-plugin-pwa": "^0.19.4",
+    "vite-plugin-pwa": "^0.19.6",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
-    "vitepress": "^1.0.0-rc.45",
+    "vitepress": "^1.0.0",
     "vitepress-plugin-compression": "^0.1.4",
     "vitepress-plugin-life-progress": "^0.0.3",
     "vitepress-plugin-mermaid": "^2.0.16",
@@ -149,7 +149,7 @@
     "@iconify/iconify": "^3.1.1",
     "@mdit-vue/shared": "^2.0.0",
     "@tweenjs/tween.js": "^23.1.1",
-    "@visactor/vchart": "^1.10.0",
+    "@visactor/vchart": "^1.10.1",
     "@visactor/vchart-theme": "^1.9.4",
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.3",
@@ -183,7 +183,7 @@
     "markdown-to-txt": "^2.0.1",
     "medium-zoom": "^1.1.0",
     "obj2gltf": "^3.1.6",
-    "ofetch": "^1.3.3",
+    "ofetch": "^1.3.4",
     "oimo-esm": "^1.0.10",
     "segment": "^0.1.3",
     "simple-git": "^3.23.0",
@@ -200,7 +200,7 @@
     "vitepress-plugin-rss": "^0.2.2",
     "vitepress-plugin-tabs": "^0.5.0",
     "vue-resize-observer": "^2.0.16",
-    "vue3-simple-icons": "^11.0.0",
+    "vue3-simple-icons": "^11.9.0",
     "xmind-embed-viewer": "^1.2.0"
   },
   "overrides": {
