--- a/package.json
+++ b/package.json
@@ -96,11 +96,11 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^20.11.30",
-    "@types/three": "^0.162.0",
-    "@unocss/preset-attributify": "^0.58.7",
-    "@unocss/preset-icons": "^0.58.7",
-    "@unocss/preset-uno": "^0.58.7",
+    "@types/node": "^20.12.2",
+    "@types/three": "^0.163.0",
+    "@unocss/preset-attributify": "^0.58.9",
+    "@unocss/preset-icons": "^0.58.9",
+    "@unocss/preset-uno": "^0.58.9",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "antdv-component-resolver": "^1.0.7",
     "autoprefixer": "^10.4.19",
@@ -121,25 +121,25 @@
     "release-it": "^17.1.1",
     "sass": "^1.72.0",
     "sitemap": "^7.1.1",
-    "unocss": "^0.58.7",
+    "unocss": "^0.58.9",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-icons": "^0.18.5",
     "unplugin-vue-components": "^0.26.0",
     "vfonts": "^0.0.3",
-    "vite": "^5.2.6",
+    "vite": "^5.2.7",
     "vite-aliases": "^0.11.6",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^1.0.11",
     "vite-plugin-pwa": "^0.19.7",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
-    "vitepress": "^1.0.1",
+    "vitepress": "^1.0.2",
     "vitepress-plugin-compression": "^0.1.4",
     "vitepress-plugin-life-progress": "^0.0.3",
     "vitepress-plugin-mermaid": "^2.0.16",
     "vitepress-plugin-sandpack": "^1.1.4",
     "vitepress-plugin-search": "^1.0.4-alpha.22",
-    "vitepress-sidebar": "^1.21.0",
+    "vitepress-sidebar": "^1.22.0",
     "vue": "^3.4.21"
   },
   "dependencies": {
@@ -149,7 +149,7 @@
     "@iconify/iconify": "^3.1.1",
     "@mdit-vue/shared": "^2.0.0",
     "@tweenjs/tween.js": "^23.1.1",
-    "@visactor/vchart": "^1.10.2",
+    "@visactor/vchart": "^1.10.3",
     "@visactor/vchart-theme": "^1.10.2",
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.3",
@@ -169,6 +169,7 @@
     "front-matter": "^4.0.2",
     "gltf-pipeline": "^4.1.0",
     "gsap": "^3.12.5",
+    "html2particle": "^0.0.10",
     "jsencrypt": "^3.3.2",
     "l-watermark": "^2.1.2",
     "lhh-utils": "^1.0.6",
@@ -186,8 +187,8 @@
     "ofetch": "^1.3.4",
     "oimo-esm": "^1.0.10",
     "segment": "^0.1.3",
-    "simple-git": "^3.23.0",
-    "three": "^0.162.0",
+    "simple-git": "^3.24.0",
+    "three": "^0.163.0",
     "vite-plugin-monitor": "^0.2.1",
     "vite-plugin-vitepress-auto-index": "^1.1.12",
     "vite-plugin-vue-preview": "^1.3.0",
