--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^20.12.5",
+    "@types/node": "^20.12.7",
     "@types/three": "^0.163.0",
     "@unocss/preset-attributify": "^0.59.0",
     "@unocss/preset-icons": "^0.59.0",
@@ -138,7 +138,7 @@
     "vite-plugin-pwa": "^0.19.8",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
-    "vitepress": "^1.0.2",
+    "vitepress": "^1.1.0",
     "vitepress-plugin-changelog": "^0.1.1",
     "vitepress-plugin-compression": "^0.1.4",
     "vitepress-plugin-life-progress": "^0.0.3",
@@ -153,7 +153,8 @@
     "@faker-js/faker": "^8.4.1",
     "@heroicons/vue": "^2.1.3",
     "@iconify/iconify": "^3.1.1",
-    "@mdit-vue/shared": "^2.0.0",
+    "@lite-tree/vue": "^1.0.3",
+    "@mdit-vue/shared": "^2.1.0",
     "@tweenjs/tween.js": "^23.1.1",
     "@visactor/vchart": "^1.10.4",
     "@visactor/vchart-theme": "^1.10.2",
