--- a/package.json
+++ b/package.json
@@ -146,14 +146,14 @@
     "vitepress-plugin-sandpack": "^1.1.4",
     "vitepress-plugin-search": "^1.0.4-alpha.22",
     "vitepress-sidebar": "^1.22.0",
-    "vue": "^3.4.23"
+    "vue": "^3.4.24"
   },
   "dependencies": {
     "@enra-gmbh/panolens": "^0.0.11",
     "@faker-js/faker": "^8.4.1",
     "@heroicons/vue": "^2.1.3",
     "@iconify/iconify": "^3.1.1",
-    "@lite-tree/vue": "^1.0.7",
+    "@lite-tree/vue": "^1.1.2",
     "@mdit-vue/shared": "^2.1.2",
     "@tweenjs/tween.js": "^23.1.1",
     "@visactor/vchart": "^1.10.4",
@@ -161,7 +161,7 @@
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.3",
     "animate.css": "^4.1.1",
-    "ant-design-vue": "4.1.2",
+    "ant-design-vue": "4.2.0",
     "bluebird": "^3.7.2",
     "cannon-es": "^0.20.0",
     "console-ban": "^5.0.0",
@@ -208,6 +208,7 @@
     "vitepress-plugin-rss": "^0.2.2",
     "vitepress-plugin-tabs": "^0.5.0",
     "vue-resize-observer": "^2.0.16",
+    "vue-timeago3": "^2.3.2",
     "vue3-simple-icons": "^11.13.0",
     "xmind-embed-viewer": "^1.2.0"
   },
