--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "composite": true,
+    "forceConsistentCasingInFileNames": true,
     "noImplicitAny": false,
     "module": "esnext",
     "target": "esnext",
@@ -15,13 +16,24 @@
     "isolatedModules": true,
     "verbatimModuleSyntax": false,
     "jsx": "preserve",
-    "lib": ["ESNext", "DOM"],
+    "lib": [
+      "ESNext",
+      "DOM"
+    ],
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "~/*": ["./*"],
-      "@vp/*": ["./.vitepress/*"],
-      "public": ["./public/*"]
+      "@/*": [
+        "./src/*"
+      ],
+      "~/*": [
+        "./*"
+      ],
+      "@vp/*": [
+        "./.vitepress/*"
+      ],
+      "public": [
+        "./public/*"
+      ]
     },
     // "typeRoots": [
     //   "typings"
@@ -65,7 +77,9 @@
     "**/*.spec.ts"
   ],
   "typedocOptions": {
-    "entryPoints": ["src/index.ts"],
+    "entryPoints": [
+      "src/index.ts"
+    ],
     "out": "docs"
   }
 }
