--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "postversion": "git push --tags",
     "fix-memory-limit": "cross-env LIMIT=8048 increase-memory-limit",
     "changelog": "conventional-changelog -p custom-config -i CHANGELOG.md -s -n ./changelog-option.cjs && git add CHANGELOG.md",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "imports": {
     "#*": "./*",
@@ -86,8 +86,8 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@iconify-json/carbon": "^1.1.36",
-    "@iconify-json/logos": "^1.1.43",
+    "@iconify-json/carbon": "^1.1.37",
+    "@iconify-json/logos": "^1.1.44",
     "@iconify/vue": "^4.1.2",
     "@release-it/conventional-changelog": "^8.0.1",
     "@types/bluebird": "^3.5.42",
@@ -96,11 +96,11 @@
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
-    "@types/node": "^22.0.2",
+    "@types/node": "^22.1.0",
     "@types/three": "^0.167.1",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
     "antdv-component-resolver": "^1.0.7",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "commitizen": "^4.3.0",
     "conventional-changelog-cli": "^5.0.0",
     "cssnano": "^7.0.4",
@@ -189,7 +189,8 @@
     "oimo-esm": "^1.0.10",
     "segment": "^0.1.3",
     "simple-git": "^3.25.0",
-    "three": "^0.167.0",
+    "svg2roughjs": "^3.2.0",
+    "three": "^0.167.1",
     "vite-plugin-monitor": "^0.2.1",
     "vite-plugin-vitepress-auto-index": "^1.1.16",
     "vite-plugin-vue-preview": "^1.3.0",
