--- a/package.json
+++ b/package.json
@@ -206,6 +206,7 @@
     "vitepress-plugin-nprogress": "^0.0.4",
     "vitepress-plugin-rss": "^0.2.9",
     "vitepress-plugin-tabs": "^0.5.0",
+    "vitepress-protect-plugin": "^1.0.6",
     "vue-resize-observer": "^2.0.16",
     "vue-timeago3": "^2.3.2",
     "vue3-simple-icons": "^13.2.0",
