--- a/package.json
+++ b/package.json
@@ -170,6 +170,7 @@
     "esno": "^4.7.0",
     "floating-vue": "^5.2.2",
     "front-matter": "^4.0.2",
+    "fs": "^0.0.1-security",
     "gltf-pipeline": "^4.1.0",
     "gsap": "^3.12.5",
     "html2particle": "^0.0.10",
