--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "vitepress-plugin-changelog": "^0.1.1",
     "vitepress-plugin-compression": "^0.1.4",
     "vitepress-plugin-life-progress": "^0.0.3",
+    "vitepress-plugin-lightbox": "^1.0.2",
     "vitepress-plugin-markdown-define": "^1.0.2",
     "vitepress-plugin-mermaid": "^2.0.16",
     "vitepress-plugin-sandpack": "^1.1.4",
@@ -210,6 +211,7 @@
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.28",
     "vitepress-plugin-detype": "^0.6.0",
+    "vitepress-plugin-group-icons": "^1.0.0-beta.4",
     "vitepress-plugin-image-viewer": "^1.1.5",
     "vitepress-plugin-npm-commands": "^0.6.0",
     "vitepress-plugin-nprogress": "^0.0.4",
