--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "@commitlint/config-conventional": "^19.2.2",
     "@iconify-json/carbon": "^1.1.37",
     "@iconify-json/logos": "^1.1.44",
-    "@iconify/json": "^2.2.238",
+    "@iconify/json": "^2.2.239",
     "@iconify/vue": "^4.1.2",
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
     "@release-it/conventional-changelog": "^8.0.1",
@@ -108,7 +108,7 @@
     "cz-customizable": "^7.2.1",
     "feed": "^4.2.2",
     "flexsearch": "^0.7.43",
-    "husky": "^9.1.4",
+    "husky": "^9.1.5",
     "increase-memory-limit": "^1.0.7",
     "less": "^4.2.0",
     "markdown-it": "^14.1.0",
@@ -125,7 +125,6 @@
     "unplugin-icons": "^0.19.2",
     "unplugin-vue-components": "^0.27.4",
     "vfonts": "^0.0.3",
-    "vite": "^5.4.1",
     "vite-aliases": "^0.11.7",
     "vite-plugin-cdn-import": "^1.0.1",
     "vite-plugin-external": "^4.3.1",
@@ -161,6 +160,8 @@
     "@tweenjs/tween.js": "^25.0.0",
     "@visactor/vchart": "^1.12.0",
     "@visactor/vchart-theme": "^1.11.6",
+    "@vitepress-code-preview/container": "^1.0.8",
+    "@vitepress-code-preview/plugin": "^1.0.4",
     "@vitepress-demo-preview/component": "^2.3.2",
     "@vitepress-demo-preview/plugin": "^1.2.3",
     "@vuecs/timeago": "^1.1.0",
@@ -174,7 +175,7 @@
     "cross-env": "^7.0.3",
     "crypto": "^1.0.1",
     "dat.gui": "^0.7.9",
-    "dayjs": "^1.11.12",
+    "dayjs": "^1.11.13",
     "default-passive-events": "^2.0.0",
     "esno": "^4.7.0",
     "floating-vue": "^5.2.2",
@@ -213,7 +214,7 @@
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.28",
     "vitepress-plugin-detype": "^0.6.0",
-    "vitepress-plugin-group-icons": "^1.0.0-beta.4",
+    "vitepress-plugin-group-icons": "^1.0.0",
     "vitepress-plugin-image-viewer": "^1.1.5",
     "vitepress-plugin-npm-commands": "^0.6.0",
     "vitepress-plugin-nprogress": "^0.0.4",
@@ -227,6 +228,7 @@
     "xmind-embed-viewer": "^1.2.0"
   },
   "overrides": {
+    "vite": "^5.4.2",
     "vite-plugin-html": "^3.2.2"
   },
   "version": "0.0.37"
