--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
     "@commitlint/cz-commitlint": "^19.5.0",
-    "@iconify/json": "^2.2.277",
+    "@iconify/json": "^2.2.279",
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
     "@release-it/conventional-changelog": "^9.0.3",
     "@types/bluebird": "^3.5.42",
@@ -74,7 +74,7 @@
     "conventional-changelog-cli": "^5.0.0",
     "conventional-changelog-gitmoji-config": "^1.5.2",
     "cssnano": "^7.0.6",
-    "cz-customizable": "^7.2.1",
+    "cz-customizable": "^7.3.0",
     "cz-message-helper": "^2.0.0",
     "feed": "^4.2.2",
     "flexsearch": "^0.7.43",
@@ -88,26 +88,27 @@
     "patch-package": "^8.0.0",
     "postcss": "^8.4.49",
     "release-it": "^17.10.0",
-    "sass": "^1.81.0",
+    "sass": "^1.82.0",
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
     "typescript": "^5.7.2",
-    "unocss": "^0.64.1",
+    "unocss": "^0.65.1",
     "unplugin-auto-import": "^0.18.6",
-    "unplugin-icons": "^0.20.2",
+    "unplugin-icons": "^0.21.0",
     "unplugin-vue-components": "^0.27.5",
     "version-mark": "^0.0.5",
     "vfonts": "^0.0.3",
     "vite-aliases": "^0.11.7",
     "vite-plugin-chunk-split": "^0.5.0",
+    "vite-plugin-compression": "^0.5.1",
     "vite-plugin-externals-new": "^1.5.5",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^2.0.2",
     "vite-plugin-mkcert": "^1.17.6",
-    "vite-plugin-pwa": "^0.21.0",
+    "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
-    "vite-plugin-version-mark": "^0.1.3",
+    "vite-plugin-version-mark": "^0.1.4",
     "vite-plugin-vue-devtools": "^7.6.7",
     "vite-plugin-vue-devtools-cn": "^7.5.4",
     "vitepress": "^1.5.0",
@@ -118,13 +119,13 @@
     "vitepress-plugin-lightbox": "^1.0.2",
     "vitepress-plugin-markdown-define": "^1.0.2",
     "vitepress-sidebar": "^1.29.0",
-    "vitest": "^2.1.6",
+    "vitest": "^2.1.8",
     "vue3-tabs-component": "^1.3.7"
   },
   "dependencies": {
     "@dash14/svg-pan-zoom": "^3.6.9",
     "@enra-gmbh/panolens": "^0.0.11",
-    "@faker-js/faker": "^9.2.0",
+    "@faker-js/faker": "^9.3.0",
     "@heroicons/vue": "^2.2.0",
     "@iconify/iconify": "^3.1.1",
     "@iconify/vue": "^4.1.2",
@@ -134,12 +135,12 @@
     "@mdit/plugin-tasklist": "^0.14.0",
     "@pinyin-pro/data": "^1.2.0",
     "@tweenjs/tween.js": "^25.0.0",
-    "@visactor/vchart": "^1.12.13",
+    "@visactor/vchart": "^1.12.15",
     "@visactor/vchart-theme": "^1.12.2",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
-    "@vitest/coverage-v8": "^2.1.6",
-    "@vitest/ui": "^2.1.6",
+    "@vitest/coverage-v8": "^2.1.8",
+    "@vitest/ui": "^2.1.8",
     "@vue/test-utils": "^2.4.6",
     "@vuecs/timeago": "^1.1.0",
     "animate.css": "^4.1.1",
@@ -212,17 +213,17 @@
     "simple-git": "^3.27.0",
     "svg-zoom-drag-vue-directives": "^1.0.12",
     "svg2roughjs": "^3.2.1",
-    "three": "^0.170.0",
+    "three": "^0.171.0",
     "typed.js": "^2.1.0",
     "ua-parser-js": "^2.0.0",
-    "vite-plugin-inspect": "^0.10.1",
+    "vite-plugin-inspect": "^0.10.3",
     "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.1",
     "vitepress-plugin-announcement": "^0.1.3",
     "vitepress-plugin-back-to-top": "^1.0.1",
     "vitepress-plugin-codeblocks-fold": "^1.2.28",
     "vitepress-plugin-detype": "^0.6.0",
-    "vitepress-plugin-group-icons": "^1.3.0",
+    "vitepress-plugin-group-icons": "^1.3.1",
     "vitepress-plugin-image-viewer": "^1.1.5",
     "vitepress-plugin-nprogress": "^0.0.4",
     "vitepress-plugin-rss": "^0.3.0",
