--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "markdown-it": "^14.1.0",
     "markdown-it-mathjax3": "^4.3.2",
     "md5": "^2.3.0",
+    "mermaid": "^11.4.1",
     "mkcert": "^3.2.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.5.2",
@@ -124,6 +125,7 @@
     "vitepress-plugin-life-progress": "^0.0.3",
     "vitepress-plugin-lightbox": "^1.0.2",
     "vitepress-plugin-markdown-define": "^1.0.2",
+    "vitepress-plugin-mermaid": "^2.0.17",
     "vitepress-sidebar": "^1.31.0",
     "vitest": "^3.0.5",
     "vue3-tabs-component": "^1.3.7"
@@ -207,7 +209,6 @@
     "markmap-toolbar": "^0.18.9",
     "markmap-view": "^0.18.9",
     "medium-zoom": "^1.1.0",
-    "mermaid": "^11.4.1",
     "ofetch": "^1.4.1",
     "oimo-esm": "^1.0.10",
     "pinia": "^3.0.0",
