--- a/package.json
+++ b/package.json
@@ -96,7 +96,7 @@
     "sitemap": "^8.0.0",
     "standard-version": "^9.5.0",
     "typescript": "^5.7.3",
-    "unocss": "65.4.3",
+    "unocss": "^65.5.0",
     "unplugin-auto-import": "^19.1.0",
     "unplugin-iconify-generator": "^0.7.3",
     "unplugin-icons": "^22.0.0",
