--- a/package.json
+++ b/package.json
@@ -52,11 +52,11 @@
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
     "@commitlint/cz-commitlint": "^19.8.0",
-    "@iconify-json/devicon": "^1.2.19",
+    "@iconify-json/devicon": "^1.2.20",
     "@iconify-json/skill-icons": "^1.2.0",
     "@iconify-json/vscode-icons": "^1.2.16",
     "@iconify/icons-emojione": "^1.2.6",
-    "@iconify/json": "^2.2.316",
+    "@iconify/json": "^2.2.317",
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
     "@release-it/conventional-changelog": "^10.0.0",
     "@types/bluebird": "^3.5.42",
@@ -113,7 +113,7 @@
     "vite-plugin-fake-server": "^2.2.0",
     "vite-plugin-git-revision-info": "^1.1.0",
     "vite-plugin-html-config": "^2.0.2",
-    "vite-plugin-mkcert": "^1.17.7",
+    "vite-plugin-mkcert": "^1.17.8",
     "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-remove-console": "^2.2.0",
     "vite-plugin-style-import": "^2.0.0",
@@ -142,7 +142,7 @@
     "@heroicons/vue": "^2.2.0",
     "@iconify/iconify": "^3.1.1",
     "@iconify/vue": "^4.3.0",
-    "@lite-tree/vue": "^1.1.4",
+    "@lite-tree/vue": "^1.1.5",
     "@mdit-vue/shared": "^2.1.3",
     "@mdit/plugin-ruby": "^0.16.0",
     "@mdit/plugin-tasklist": "^0.16.0",
@@ -151,7 +151,7 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@pinyin-pro/data": "^1.2.0",
     "@tweenjs/tween.js": "^25.0.0",
-    "@visactor/vchart": "1.13.5",
+    "@visactor/vchart": "^1.13.7",
     "@visactor/vchart-theme": "^1.12.2",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
@@ -233,7 +233,7 @@
     "svg2roughjs": "^3.2.1",
     "three": "^0.174.0",
     "typed.js": "^2.1.0",
-    "ua-parser-js": "^2.0.2",
+    "ua-parser-js": "^2.0.3",
     "vite-plugin-inspect": "^11.0.0",
     "vite-plugin-vue-preview": "^1.3.0",
     "vitepress-markdown-timeline": "^1.2.2",
