--- a/package.json
+++ b/package.json
@@ -151,7 +151,7 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@pinyin-pro/data": "^1.2.0",
     "@tweenjs/tween.js": "^25.0.0",
-    "@visactor/vchart": "^1.13.7",
+    "@visactor/vchart": "1.13.5",
     "@visactor/vchart-theme": "^1.12.2",
     "@vitepress-code-preview/container": "^1.0.8",
     "@vitepress-code-preview/plugin": "^1.0.6",
