--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "docs:dev": "vitepress --mode development --host",
     "docs:prepare": "esno scripts/prepare.ts",
     "docs:build": "vitepress build",
+    "docs:test": "esno ./utils/build-version.ts",
     "docs:preview": "vitepress preview",
     "docs:pdf": "npm run docs:build && node generate-pdf.js",
     "commit": "git add . && cz-customizable",
@@ -61,6 +62,7 @@
     "@red-asuka/vitepress-plugin-tabs": "^0.0.4",
     "@release-it/conventional-changelog": "^10.0.0",
     "@types/bluebird": "^3.5.42",
+    "@types/fs-extra": "^11.0.4",
     "@types/line-reader": "^0.0.37",
     "@types/lodash-es": "^4.17.12",
     "@types/markdown-it-footnote": "^3.0.4",
@@ -83,7 +85,7 @@
     "cz-customizable": "^7.4.0",
     "cz-message-helper": "^2.0.0",
     "feed": "^4.2.2",
-    "flexsearch": "^0.8.132",
+    "flexsearch": "^0.8.138",
     "glob": "^11.0.1",
     "husky": "^9.1.7",
     "increase-memory-limit": "^1.0.7",
@@ -91,7 +93,7 @@
     "markdown-it": "^14.1.0",
     "markdown-it-mathjax3": "^4.3.2",
     "md5": "^2.3.0",
-    "mermaid": "^11.5.0",
+    "mermaid": "^11.6.0",
     "mkcert": "^3.2.0",
     "patch-package": "^8.0.0",
     "postcss": "^8.5.3",
@@ -168,6 +170,7 @@
     "animejs": "^3.2.2",
     "ant-design-vue": "4.2.6",
     "bluebird": "^3.7.2",
+    "browserify-fs": "^1.0.0",
     "cannon-es": "^0.20.0",
     "chalk": "^5.4.1",
     "cheerio": "^1.0.0",
@@ -187,6 +190,7 @@
     "esno": "^4.8.0",
     "front-matter": "^4.0.2",
     "fs": "^0.0.1-security",
+    "fs-extra": "^11.3.0",
     "gray-matter": "^4.0.3",
     "gsap": "^3.12.7",
     "html2particle": "^0.0.10",
@@ -267,7 +271,7 @@
     "yuppie-ui": "^0.0.11"
   },
   "overrides": {
-    "mermaid": "^11.5.0",
+    "mermaid": "^11.6.0",
     "release-it": "^18.0.0",
     "vite": "^6.0.0",
     "vite-plugin-html": "^3.2.2",
